[package]
name = "code-llm"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for interactive code suggestions using Ollama"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
dialoguer = "0.11"
walkdir = "2.3"
regex = "1.9"
similar = "2.2"
same-file = "1.0"
thiserror = "1.0"
